--- a/views/course-analytics/preview-statistics.ejs
+++ b/views/course-analytics/preview-statistics.ejs
@@ -10,7 +10,7 @@
             </div>
             <div class="box-footer bg-green">
                 <div class="row">
-                    <div class="col-sm-4 border-right">
+                    <div class="col-xs-4 border-right">
                         <div class="description-block">
                             <h5 class="description-header" style="font-size: 25px;"><i class="ionicons ion-ios-people"></i></h5>
                             <span class="description-text"><b>{{totalUser}}</b> {{totalUser <= 1 ? 'user': 'users'}}</span><br/>
@@ -19,7 +19,7 @@
                         <!-- /.description-block -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-sm-4 border-right">
+                    <div class="col-xs-4 border-right">
                         <div class="description-block">
                             <h5 class="description-header" style="font-size: 25px;"><i class="fa fa-file-pdf-o"></i> <i class="fa fa-file-video-o"></i></h5>
                             <span class="description-text"><b>{{totalPdf}}</b> {{totalPdf <= 1 ? 'pdf': 'pdf'}}</span><br/>
@@ -28,7 +28,7 @@
                         <!-- /.description-block -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-sm-4">
+                    <div class="col-xs-4">
                         <div class="description-block">
                             <h5 class="description-header" style="font-size: 25px;"><i class="fa fa-comments"></i></h5>
                             <span class="description-text"><b>{{totalDiscussion}}</b> {{totalDiscussion <= 1 ? 'discussion': 'discussions'}}</span>
