--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -96,6 +96,18 @@ input#searchInput{
   margin-bottom: 0px;
 }
 
+.currentCommentPageClass{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
+  margin-bottom: 0px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.currentCommentPageClass:hover{
+  text-decoration: underline;
+}
+
 .createdAnnoZoneButton{
     font-size: 9pt;
     font-weight: bold;
