--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -66,11 +66,8 @@
                   </div>
               </div>
                 <div id="commentSubmissionDiv" ng-show="writeCommentMode">
-                    COMMENT CREATE PAGE: {{annotationSubmitPage}}
 
-                    <div ng-repeat="(key,val) in annotationZonesOnOtherSlides">
-                      ON PAGE {{key}} YOU HAVE {{val.length}} ANNZONES
-                    </div>
+                    <span class="currentCommentPageClass" ng-click="setPageNumber(annotationSubmitPage)">Annotation for Page {{annotationSubmitPage}}</span>
 
                     <form name="commentForm" ng-submit="submitComment()">
 
@@ -123,7 +120,9 @@
                                     <a class="btn btn-danger btn-xs" ng-click="writeCommentMode=false">CANCEL</a>
                                 </div>
                             </div>
-                            <div id="createdAnnoZonesId" class="createdAnnoZonesClass CreatedAnnoZones-header">Created Annotation Zones:</div>
+                            {{annotationZonesOnOtherSlides}}
+                            {{Object.size(annotationZonesOnOtherSlides)}}
+                            <div id="createdAnnoZonesId" class="createdAnnoZonesClass CreatedAnnoZones-header" ng-hide="(annotationZonesOnOtherSlides=={})">Created Annotation Zones:</div>
                             <div id="createdAnnoZoneButtons">
                                 <div ng-repeat-start="(page,annZonesList) in annotationZonesOnOtherSlides"></div>
                                 <button type="button" class="btn btn-default btn-xs createdAnnoZoneButton" style="background-color:{{val.color}} !important"ng-repeat="(key,val) in annZonesList" ng-click="setPageNumber(page)">
