Hid edit button on AnnZone during writeComment mode Removed log lines

--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -25,7 +25,7 @@
                           edit-tag-name-temp="annotationZoneList[key].editTagNameTemp"
                           dragable="annotationZoneList[key].dragable"
                           is-being-created="annotationZoneList[key].isBeingCreated"
-                          can-be-edited="annotationZoneList[key].canBeEdited"
+                          can-be-edited="annotationZoneList[key].canBeEdited && !isInWriteCommentMode()"
                           ann-zone-id="annotationZoneList[key].annZoneId"
                           div-counter="annotationZoneList[key].divCounter"
                           list-id="annotationZoneList[key].id"
