can reset password

--- a/views/admin-lte/formLogin.ejs
+++ b/views/admin-lte/formLogin.ejs
@@ -50,5 +50,7 @@
                 <button class="btn btn-primary btn-block">Login <spinner show="isLoading"></spinner></button>
             </div>
         </div>
+
+        <a href="/accounts/forgot-password">Forgot Password</a>
     </fieldset>
 </form>
