integrate countprint to pdf-viewer

--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -42,7 +42,7 @@
     <link href="/slide-viewer/css/jquery.simplecolorpicker-glyphicons.css" rel="stylesheet" tyle="text/css"/>
     <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" tyle="text/css"/>
     <link rel="stylesheet" href="/pdfjs/build/components/pdf_viewer.css">
-
+    <link rel="stylesheet" href="/countprint/countprint.css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
