use neutral color for countprint 0 values

--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -306,7 +306,9 @@ input#searchInput {
 .slideNavigationCurrentProgress {
     width: 0%;
     height: 100%;
-    background-color: #FFA500;
+    float: left;
+    //background-color: #FFA500;
+    background-color: #FFFFFF;
 }
 
 #slideNavigation,
