tooltip to countprint

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -5,7 +5,9 @@
 <!-- pdf pagination -->
 <div class="slideNavigationWrapper">
     <div class="slideNavigationProgress">
-        <div class="countprint"></div>
+        <div class="countprint">
+            <span class="countprint-tooltip"></span>
+        </div>
         <div class="slideNavigationCurrentProgress"></div>
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
