--- a/public/countprint/countprint.css
+++ b/public/countprint/countprint.css
@@ -1,5 +1,19 @@
 .countprint {
-    height: 5px;
+    height: 7px;
     width: 100%;
-    float: left;
+    position: relative;
+}
+
+.countprint span {
+    display: none;
+    background: #E6E6E6;
+    border-radius: 3px;
+    padding: 0 7px;
+}
+
+.countprint:hover span {
+    display: block;
+    position: fixed;
+    cursor: default;
+    overflow: hidden;
 }
