--- a/views/admin-lte/statics/about.ejs
+++ b/views/admin-lte/statics/about.ejs
@@ -1,35 +1,27 @@
+<% include ../header %>
+<div class="wrapper">
 
+    <!-- Header Navbar -->
+    <% include ../mainMenu %>
 
-            <div class="container">
-                <div class="row ">
-                    <div class="col-md-9" style="opacity: 0.9;padding:40px;margin-top:20px;background: white">
-                        <h1><i class="ion-information-circled"></i> &nbsp;&nbsp;We are still developing</h1>
+    <section class="content-header">
+        <ol class="breadcrumb">
+            <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+            <li>About CourseMapper</li>
+        </ol>
+    </section>
 
-                        <br/>
-                        <p class="lead">With not just many missing links are expected to be found, but also
-                            non-functional
-                            buttons and interfaces.<br/>
-                            Please be aware that we are still studying our usabilities, while also implementing
-                            features.
-                        </p>
+    <div class="content-wrapper">
+        <section class="content">
+            <h3> About CourseMapper</h3>
+            <p>
+                CourseMapper is a collaborative learning tools, where students can work together on course contents.
+            </p>
 
-                        <p class="lead">
-                            If you arrived at this page, that means you are participating in our early access program
-                            for our
-                            requirement and usabilities studies.
-                            <br/>
+            <h4>Teams </h4>
 
-                        </p>
-
-                        <p class="lead">
-                            We thank you for your participations.
-                        </p>
-                    </div>
-                </div>
-            </div>
-<style>
-    .content-wrapper{
-        background-size:cover;
-        background: url(/img/bg.jpg) no-repeat center; 
-    }
-</style>
+        </section>
+    </div>
+</div><!-- ./wrapper -->
+<% include ../jsfooter %>
+<% include ../footer %>
