--- a/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
+++ b/views/admin-lte/course/newsfeedUpdate/newsfeedUpdate.ejs
@@ -15,7 +15,7 @@
             </div>
             <div class="content" style="max-height: 500px; overflow: auto; background-color: #ECF0F5; border-radius: 3px;">
                 <ul class="timeline">
-                    <li ng-repeat="nfData in newsfeedData | orderBy: '-dateAdded'| filter: query  | filter: filterDropDown.name" ng-switch on="nfData.actionSubject">
+                    <li ng-repeat="nfData in newsfeedData | orderBy: '-dateAdded'| filter: filterDropDown.name" ng-switch on="nfData.actionSubject">
                         <i class="fa fa-book bg-navy" ng-switch-when="course"></i>
                         <i class="fa fa-arrow-up bg-teal-active" ng-switch-when="up vote"></i>
                         <i class="fa fa-arrow-down bg-teal" ng-switch-when="down vote"></i>
@@ -30,7 +30,6 @@
                         <i class="fa fa-comments-o bg-green" ng-switch-when="discussion"></i>
                         <i class="fa fa-user bg-maroon" ng-switch-default></i>
                         <div class="timeline-item">
-
                             <div class="timeline-header bg-gray inactive" style="border-radius: 3px;">
                                 <small class="text-muted">
                                     <b>{{nfData.actionSubject | capitalize}}</b>
@@ -50,9 +49,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--div class="timeline-footer">
-                                <a class="btn btn-primary btn-xs">View</a>
-                            </div-->
+
                         </div>
                     </li>
                 </ul>
