--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -308,7 +308,7 @@ input#searchInput {
     height: 100%;
     float: left;
     //background-color: #FFA500;
-    background-color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.24);
 }
 
 #slideNavigation,
