--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -19,7 +19,7 @@
             <a class="top-menu-left visible-xs" data-toggle="offcanvas" role="button"><i class="ionicons ion-more"> </i>
             </a>
             <% } %>
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav hidden-xs">
                 <li class="dropdown">
                     <a class="cursor dropdown-toggle" data-toggle="dropdown" aria-expanded="true" ng-cloak>
                         <i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;
@@ -42,6 +42,24 @@
         <!-- Navbar Right Menu -->
         <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
+                <li class="dropdown info-links visible-xs">
+                    <a class="cursor dropdown-toggle" data-toggle="dropdown" aria-expanded="true" ng-cloak>
+                        <i class="ion-information-circled"></i>&nbsp;&nbsp;&nbsp;
+                        Info Links <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li>
+                            <a href="/about">
+                                About CourseMapper
+                            </a>
+                        </li>
+                        <li ng-show="user">
+                            <a href="/recommend-category">
+                                Recommend Categories
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
                 <!-- Messages: style can be found in dropdown.less-->
                 <li class="dropdown tasks-menu" ng-cloak ng-hide="user">
                     <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">
