hide sort dropdown when no content

--- a/views/admin-lte/treeNode/links/links.ejs
+++ b/views/admin-lte/treeNode/links/links.ejs
@@ -8,7 +8,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <h4>Links</h4>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6" ng-show="links.length > 1">
                     <select id="orderTypeSelect"
                             ng-model="orderType"
                             ng-init="orderType = orderingOptions[0]"
