--- a/views/admin-lte/course/discussion/discussion.ejs
+++ b/views/admin-lte/course/discussion/discussion.ejs
@@ -5,7 +5,7 @@
                 <div class="col-xs-12 col-sm-6">
                     <h4>Discussion Topics</h4>
                 </div>
-                <div class="col-xs-12 col-sm-6">
+                <div class="col-xs-12 col-sm-6" ng-show="topics.length > 1">
                     <select id="orderTypeSelect"
                             ng-model="orderType"
                             ng-init="orderType = orderingOptions[0]"
@@ -104,7 +104,7 @@
 
                     <div class="row">
                         <br>
-                        <div class="col-xs-12 col-sm-4">
+                        <div class="col-xs-12 col-sm-4" ng-show="replies.length > 1">
                             <select id="orderTypeSelect"
                                     ng-model="orderTypeReply"
                                     ng-init="orderTypeReply = orderingOptions[0]"
