optimized footprint loading, refactored countmap

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -5,8 +5,8 @@
 <!-- pdf pagination -->
 <div class="slideNavigationWrapper">
     <div class="slideNavigationProgress">
-        <div class="countprint">
-            <span class="countprint-tooltip"></span>
+        <div class="countmap">
+            <span class="countmap-tooltip"></span>
         </div>
         <div class="slideNavigationCurrentProgress"></div>
     </div>
