--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -38,7 +38,9 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/video-annotations/va.js"></script>
-<script src="/countprint/countprint.js"></script>
+<script src="/src/countmap/countmap.js"></script>
+<script src="/src/footprint/footprint.js"></script>
+
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
 <script src="/slide-viewer/js/jquery.fullscreen-min.js"></script>
