--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -36,20 +36,19 @@
     <!-- Slide viewer css -->
     <link href="/slide-viewer/css/slideviewer.css" rel="stylesheet" type="text/css"/>
     <!--<link rel="stylesheet" href="/slide-viewer/css/pick-a-color-1.2.3.min.css" type="text/css" />-->
-    <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" tyle="text/css"/>
-    <link href="/slide-viewer/css/jquery.simplecolorpicker.css" rel="stylesheet" tyle="text/css"/>
-    <link href="/slide-viewer/css/jquery.simplecolorpicker-regularfont.css" rel="stylesheet" tyle="text/css"/>
-    <link href="/slide-viewer/css/jquery.simplecolorpicker-glyphicons.css" rel="stylesheet" tyle="text/css"/>
-    <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" tyle="text/css"/>
-    <link rel="stylesheet" href="/pdfjs/build/components/pdf_viewer.css">
-    <link rel="stylesheet" href="/countprint/countprint.css">
+    <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" type="text/css"/>
+    <link href="/slide-viewer/css/jquery.simplecolorpicker.css" rel="stylesheet" type="text/css"/>
+    <link href="/slide-viewer/css/jquery.simplecolorpicker-regularfont.css" rel="stylesheet" type="text/css"/>
+    <link href="/slide-viewer/css/jquery.simplecolorpicker-glyphicons.css" rel="stylesheet" type="text/css"/>
+    <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" type="text/css"/>
+    <link href="/pdfjs/build/components/pdf_viewer.css" rel="stylesheet" type="text/css">
+    <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-    <script src="https://gomera.informatik.rwth-aachen.de:8445/footprint.js"></script>
 </head>
 <!--
 skin-black
