--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -23,9 +23,6 @@
 
     <!-- <link href="/jquery/jsplumb.css" rel="stylesheet"> -->
 
-    <!-- videogular -->
-    <link rel="stylesheet" type="text/css" href="/videogular-themes-default/videogular.css">
-    <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css"/>
 
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
     <link rel="stylesheet" type="text/css" href="/angular-toastr/angular-toastr.min.css"/>
@@ -42,7 +39,10 @@
     <link href="/slide-viewer/css/jquery.simplecolorpicker-glyphicons.css" rel="stylesheet" type="text/css"/>
     <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" type="text/css"/>
     <link href="/pdfjs/build/components/pdf_viewer.css" rel="stylesheet" type="text/css">
+
     <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
+    <link href="/libs/videogular-themes-default/videogular.css">
+    <link href="/src/video-annotations/styles/styles.css" rel="stylesheet" type="text/css"/>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
