--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -8,7 +8,7 @@
 <script src="/jquery/jquery.simulate.ext.js"></script>
 <script src="/jquery/jquery.simulate.drag-n-drop.js"></script>
 
-<script src="/lodash/lodash.min.js"></script>
+<script src="/libs/lodash/lodash.min.js"></script>
 <script src="/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 <script src="/bootstrap/js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
 <script src="/bootstrap-timepicker/js/bootstrap-timepicker.js"></script>
@@ -30,14 +30,14 @@
 <script src="/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/angular-toastr/angular-toastr.min.js"></script>
 <script src="/angular-toastr/angular-toastr.tpls.js"></script>
-<script src="/videogular/videogular.js"></script>
-<script src="/videogular-controls/vg-controls.js"></script>
-<script src="/videogular-angulartics/vg-analytics.js"></script>
-<script src="/videogular-overlay-play/vg-overlay-play.js"></script>
-<script src="/videogular-youtube/youtube.js"></script>
+<script src="/libs/videogular/videogular.js"></script>
+<script src="/libs/videogular-controls/vg-controls.js"></script>
+<script src="/libs/videogular-angulartics/vg-analytics.js"></script>
+<script src="/libs/videogular-overlay-play/vg-overlay-play.js"></script>
+<script src="/libs/videogular-youtube/youtube.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
-<script src="/video-annotations/va.js"></script>
+<script src="/src/video-annotations/dest/video-annotations.min.js"></script>
 <script src="/src/countmap/countmap.js"></script>
 <script src="/src/footprint/footprint.js"></script>
 
