--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -1,4 +1,7 @@
 <!-- REQUIRED JS SCRIPTS -->
+
+<script src="/socket.io/socket.io.js"></script>
+
 <script src="/jquery/jquery.min.js"></script>
 <script src="/jquery/jquery-ui.min.js"></script>
 <script src="/jquery/jquery.ui.touch-punch.min.js"></script>
@@ -30,16 +33,16 @@
 <script src="/ng-file-upload/ng-file-upload.min.js"></script>
 <script src="/angular-toastr/angular-toastr.min.js"></script>
 <script src="/angular-toastr/angular-toastr.tpls.js"></script>
-<script src="/libs/videogular/videogular.js"></script>
-<script src="/libs/videogular-controls/vg-controls.js"></script>
-<script src="/libs/videogular-angulartics/vg-analytics.js"></script>
-<script src="/libs/videogular-overlay-play/vg-overlay-play.js"></script>
+
+<script src="/libs/videogular/videogular.min.js"></script>
+<script src="/libs/videogular-controls/vg-controls.min.js"></script>
+<script src="/libs/videogular-angulartics/vg-analytics.min.js"></script>
+<script src="/libs/videogular-overlay-play/vg-overlay-play.min.js"></script>
 <script src="/libs/videogular-youtube/youtube.js"></script>
-<script src="/socket.io/socket.io.js"></script>
+
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
 <script src="/src/video-annotations/dest/video-annotations.min.js"></script>
 <script src="/src/countmap/countmap.js"></script>
-<script src="/src/footprint/footprint.js"></script>
 
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
