--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -40,15 +40,16 @@
     <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" type="text/css"/>
     <link href="/pdfjs/build/components/pdf_viewer.css" rel="stylesheet" type="text/css">
 
-    <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
     <link href="/libs/videogular-themes-default/videogular.css">
     <link href="/src/video-annotations/styles/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
+    <script src="https://gomera.informatik.rwth-aachen.de:8445/footprint.js"></script>
 </head>
 <!--
 skin-black
