fixed issues with styles

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -41,7 +41,7 @@
 <script src="/libs/videogular-youtube/youtube.js"></script>
 
 <script src="/slide-viewer/js/directives/sa-annotationzone.js"></script>
-<script src="/src/video-annotations/dest/video-annotations.min.js"></script>
+<script src="/src/video-annotations/dest/video-annotations.js"></script>
 <script src="/src/countmap/countmap.js"></script>
 
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
