--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -40,7 +40,7 @@
     <link href="/slide-viewer/css/jquery.simplecolorpicker-fontawesome.css" rel="stylesheet" type="text/css"/>
     <link href="/pdfjs/build/components/pdf_viewer.css" rel="stylesheet" type="text/css">
 
-    <link href="/libs/videogular-themes-default/videogular.css">
+    <link href="/libs/videogular-themes-default/videogular.min.css" type="text/css" rel="stylesheet">
     <link href="/src/video-annotations/styles/styles.css" rel="stylesheet" type="text/css"/>
     <link href="/src/countmap/countmap.css" rel="stylesheet" type="text/css">
 
