--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateActionBar.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateActionBar.ejs
@@ -1,5 +1,3 @@
-<ul class="">
-    <a style="cursor: pointer"
-       title="Add External Resource">
-        <i class="ionicons ion-edit"></i> &nbsp; FILTER</a>
-</ul>
+<div style="margin-right: 15px;">
+    Content node activity in the last 30 days
+</div>
