--- a/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateFooter.ejs
+++ b/views/admin-lte/treeNode/nodeNewsFeedUpdate/nodeNewsFeedUpdateFooter.ejs
@@ -1,1 +1,1 @@
-<script type="application/javascript" src="/newsfeed/newsfeed.controller.js"></script>
+<script type="application/javascript" src="/newsfeed/newsfeedNode.controller.js"></script>
