remove slide progress control and use countmap instead

--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -8,7 +8,7 @@
         <div class="countmap">
             <span class="countmap-tooltip"></span>
         </div>
-        <div class="slideNavigationCurrentProgress"></div>
+        <!--<div class="slideNavigationCurrentProgress"></div>-->
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-5 text-center">
