--- a/public/angular/views/pdf-viewer.html
+++ b/public/angular/views/pdf-viewer.html
@@ -8,7 +8,7 @@
         <div class="countmap">
             <span class="countmap-tooltip"></span>
         </div>
-        <div class="slideNavigationCurrentProgress"></div>
+        <!--<div class="slideNavigationCurrentProgress"></div>-->
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-5 text-center">
