--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -1,326 +1,327 @@
 .debug {
-    border-style: solid;
-    border-color: #ff0000;
+  border-style: solid;
+  border-color: #ff0000;
 }
 
 .hasOnClick {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .blueText {
-    color: blue;
+  color: blue;
 }
 
 .slideRectWrapper {
-    padding-top: 1px;
-    padding-bottom: 1px;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
 
 .colorPickerWrapper {
-    float: left;
-    margin-left: -20px;
-    width: 20px;
+  float: left;
+  margin-left: -20px;
+  width: 20px;
 }
 
 .annoFadeEffect {
-    opacity: 0.125;
-    transition: opacity .2s ease-in-out;
-    -moz-transition: opacity .2s ease-in-out;
-    -webkit-transition: opacity .2s ease-in-out;
+  opacity: 0.125;
+  transition: opacity .2s ease-in-out;
+  -moz-transition: opacity .2s ease-in-out;
+  -webkit-transition: opacity .2s ease-in-out;
 }
 
 .annoFadeEffect:hover {
-    opacity: 0.75;
+  opacity: 0.75;
 }
 
 .annoEditEffect {
-    opacity: 0.75;
-    border: 1px dashed white;
-    transition: background-color .1s linear;
-    -moz-transition: background-color .1s linear;
-    -webkit-transition: background-color .1s linear;
+  opacity: 0.75;
+  border: 1px dashed white;
+  transition: background-color .1s linear;
+  -moz-transition: background-color .1s linear;
+  -webkit-transition: background-color .1s linear;
 }
 
 .slideEditIcon {
-    float: right;
-    color: #fff;
-    margin: 2px;
-    cursor: pointer;
+  float: right;
+  color: #fff;
+  margin: 2px;
+  cursor: pointer;
 }
 
 .slideValidationIcon {
-    color: #fff;
-    margin: 2px;
+  color: #fff;
+  margin: 2px;
 }
 
 .filter-header {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 #inpFieldCurrPage {
-    width: 25pt;
-    color: #fff;
-    text-align: center;
-    background-color: #333;
-    border-width: 0px;
-    border: none;
+  width: 25pt;
+  color: #fff;
+  text-align: center;
+  background-color: #333;
+  border-width: 0px;
+  border: none;
 
 }
 
 #annoZonesTriggersId {
-    color: #fff;
-    cursor: pointer;
-    font-size: 10pt;
+  color: #fff;
+  cursor: pointer;
+  font-size: 10pt;
 }
 
 input#searchInput {
-    height: 34px;
-    margin-top: 10px;
+  height: 34px;
+  margin-top: 10px;
 
 }
 
 .cmtBx {
-    background-color: rgba(0, 0, 255, 0.05);
+  background-color: rgba(0, 0, 255, 0.05);
 }
 
 #replyAnno.replyControl {
-    padding-top: 10px;
-    padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .CreatedAnnoZones-header {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #545454;
-    margin-bottom: 0px;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
+  margin-bottom: 0px;
 }
 
 .currentCommentPageClass {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #545454;
-    margin-bottom: 0px;
-    text-decoration: underline;
-    cursor: pointer;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
+  margin-bottom: 0px;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .currentCommentPageClass:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .createdAnnoZoneButton {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
-    padding: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin: 2px;
-    float: left;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 2px;
+  float: left;
 }
 
 .createdAnnoZoneButton:hover {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
 }
 
 .annoZonesNote {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #7e7e7e;
-    text-align: left;
-    float: left;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #7e7e7e;
+  text-align: left;
+  float: left;
 }
 
 .filter-header {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #545454;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
 }
 
 .filter-tag {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
-    background-color: #B4CDCD;
-    padding: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin: 2px;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD;
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin: 2px;
 }
 
 .filter-tag:hover {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
-    background-color: #B4CDCD !important;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
 
 }
 
 .filter-tag:active {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
-    background-color: #B4CDCD !important;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
 
 }
 
 .filter-tag:focus {
-    font-size: 9pt;
-    font-weight: bold;
-    color: #fff;
-    background-color: #B4CDCD !important;
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
 }
 
 #tagErrorList {
-    font-size: 9pt;
-    font-weight: bold;
-    color: red;
+  font-size: 9pt;
+  font-weight: bold;
+  color: red;
 }
 
 .slideRectSpan > .slideRectInput {
-    width: 80%;
-    max-width: 50px;
-    min-width: 10px;
-    color: #000
+  width: 80%;
+  max-width: 50px;
+  min-width: 10px;
+  color: #000
 
 }
 
 .slideRect {
-    min-width: 126px;
-    min-height: 26px;
+  min-width: 126px;
+  min-height: 26px;
 }
 
 .btn.btn-white.btn-link {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    padding-right: 6px;
-    padding-left: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right: 6px;
+  padding-left: 6px;
 }
 
 .btn.btn-default.color-dropdown.dropdown-toggle.no-hex {
-    padding: 1px;
+  padding: 1px;
 }
 
 .slideRect > .ui-resizable-handle.ui-resizable-ne {
-    height: 0px;
-    width: 0px;
+  height: 0px;
+  width: 0px;
 }
 
 .slideRect > .ui-resizable-handle.ui-resizable-nw {
-    height: 0px;
-    width: 0px;
+  height: 0px;
+  width: 0px;
 }
 
 .slideRect > .ui-resizable-handle.ui-resizable-sw {
-    height: 0px;
-    width: 0px;
+  height: 0px;
+  width: 0px;
 }
 
 .slideRect > .ui-resizable-handle {
-    background-color: white;
+  background-color: white;
 }
 
 #viewerWrapper {
-    position: relative;
-    top: 0px;
-    left: 0px;
+  position: relative;
+  top: 0px;
+  left: 0px;
 }
 
 #annotationZone {
-    bottom: 45px;
-    width: 100%;
-    height: auto;
-    position: absolute;
-    top: 0px;
+  bottom: 45px;
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 0px;
 }
 
 .slideRectSpan {
-    color: white;
-    font-weight: bold;
-    padding-left: 2pt;
-    padding-right: 2pt;
-    margin-left: 2px;
+  color: white;
+  font-weight: bold;
+  padding-left: 2pt;
+  padding-right: 2pt;
+  margin-left: 2px;
 }
 
 .commentZoneList {
-    /*max-height: 600px;*/
-    /*  overflow-y: auto;
-      overflow-x: hidden;*/
+  /*max-height: 600px;*/
+  /*  overflow-y: auto;
+    overflow-x: hidden;*/
 }
 
 #commentList {
-    max-height: 600px;
-    overflow-y: auto;
-    overflow-x: hidden;
+  max-height: 600px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .slideRect1 {
-    min-width: 126px;
-    min-height: 30px;
+  min-width: 126px;
+  min-height: 30px;
 
 }
 
 .btn-white {
-    color: #FFF;
+  color: #FFF;
 }
 
 .btn-white:hover {
-    color: #FFF;
+  color: #FFF;
 }
 
 #viewerContainer {
 }
 
 .notSelectable {
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -o-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 .iconSlideNav {
-    font-size: 15pt;
-    vertical-align: middle;
-    display: inline-block;
-    color: #fff;
-    cursor: pointer;
+  font-size: 15pt;
+  vertical-align: middle;
+  display: inline-block;
+  color: #fff;
+  cursor: pointer;
 }
 
 #slideNavText {
-    font-size: 12pt;
-    vertical-align: middle;
-    display: inline-block;
-    color: #fff
+  font-size: 12pt;
+  vertical-align: middle;
+  display: inline-block;
+  color: #fff
 }
 
-#slideNavigationProgress,
-.slideNavigationProgress {
-    width: 100%;
-    height: 4pt;
-    background-color: #191919;
-}
+/*Commented because of CountMap*/
+/*#slideNavigationProgress,*/
+/*.slideNavigationProgress {*/
+/*width: 100%;*/
+/*height: 4pt;*/
+/*background-color: #191919;*/
+/*}*/
 
-#slideNavigationCurrentProgress,
-.slideNavigationCurrentProgress {
-    width: 0%;
-    height: 50%;
-    float: left;
-    background-color: #FFA500;
-    //background-color: #3c8dbc;
-}
+/*#slideNavigationCurrentProgress,*/
+/*.slideNavigationCurrentProgress {*/
+/*width: 0%;*/
+/*height: 50%;*/
+/*float: left;*/
+/*background-color: #FFA500;*/
+/*//background-color: #3c8dbc;*/
+/*}*/
 
 #slideNavigation,
 .slideNavigation {
-    background-color: black;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    width: 100%;
+  background-color: black;
+  margin-right: 0px;
+  margin-left: 0px;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  width: 100%;
 }
 
 [ng\:cloak], [ng-cloak], .ng-cloak {
-    display: none !important;
+  display: none !important;
 }
