--- a/public/angular/views/pdf-viewer.html
+++ b/public/angular/views/pdf-viewer.html
@@ -4,11 +4,10 @@
 
 <!-- pdf pagination -->
 <div class="slideNavigationWrapper">
-    <div class="slideNavigationProgress">
-        <div class="countmap">
-            <span class="countmap-tooltip"></span>
-        </div>
-        <!--<div class="slideNavigationCurrentProgress"></div>-->
+    <div id="progress-bar">
+        <div id="countmap-tooltip"></div>
+        <div id="countmap"></div>
+        <div id="progress-indicator"></div>
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-5 text-center">
