--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -295,28 +295,25 @@ input#searchInput {
   color: #fff
 }
 
-/*Commented because of CountMap*/
-/*#slideNavigationProgress,*/
-/*.slideNavigationProgress {*/
-/*width: 100%;*/
-/*height: 4pt;*/
-/*background-color: #191919;*/
-/*}*/
+#progress-bar {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
 
-/*#slideNavigationCurrentProgress,*/
-/*.slideNavigationCurrentProgress {*/
-/*width: 0%;*/
-/*height: 50%;*/
-/*float: left;*/
-/*background-color: #FFA500;*/
-/*//background-color: #3c8dbc;*/
-/*}*/
+#progress-indicator {
+  height: 33%;
+  position: absolute;
+  z-index: 10;
+  bottom: 0;
+  background: orange;
+}
 
 #slideNavigation,
 .slideNavigation {
   background-color: black;
-  margin-right: 0px;
-  margin-left: 0px;
+  margin-right: 0;
+  margin-left: 0;
   padding-top: 1%;
   padding-bottom: 1%;
   width: 100%;
