--- a/public/src/countmap/countmap.css
+++ b/public/src/countmap/countmap.css
@@ -1,20 +1,7 @@
-.countmap {
-  height: 7px;
+#countmap {
+  height: 9px;
   width: 100%;
-  border: solid #000000 thin;
+  border-top: solid #000000 thin;
   position: relative;
-}
-
-.countmap span {
-  display: none;
-  background: #E6E6E6;
-  border-radius: 3px;
-  padding: 0 7px;
-}
-
-.countmap:hover span {
-  display: block;
-  position: fixed;
-  cursor: default;
-  overflow: hidden;
+  background: white;
 }
