--- a/views/admin-lte/treeNode/pdf/pdf.ejs
+++ b/views/admin-lte/treeNode/pdf/pdf.ejs
@@ -58,8 +58,10 @@
                                 placeholder = "bla"
                                 ng-model="orderType"
                                 ng-init="orderType = orderType || orderingOptions[0]"
-                                ng-options="item as item.name for item in orderingOptions | filter: {disabled: 'false'}"
+                                ng-options="item as item.name for item in orderingOptions"
                                 class="form-control">
+
+
                         </select>
                           <input id="searchInput" placeholder="Search..." class="form-control" ng-model="rawSearchTerm"></input>
                       </div>
